--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "app-build": "node build/build.js native"
   },
   "dependencies": {
+    "@sentry/browser": "^5.3.0",
+    "@sentry/integrations": "^5.3.1",
     "@xkeshi/vue-barcode": "^1.0.0",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
