--- a/package.json
+++ b/package.json
@@ -1,130 +1,41 @@
 {
-  "name": "vuedemo",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "xxt",
+  "name": "m-cli3",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "unit": "jest --config test/unit/jest.conf.js",
-    "test": "npm run unit",
-    "lint": "eslint --fix --ext .js,.vue src test/unit",
-    "app": "node server/app.js",
-    "start": "npm run dev",
-    "prod": "node build/build.js prod reach_dist",
-    "build": "node build/build.js",
-    "app-build": "node build/build.js native"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@sentry/browser": "^5.3.0",
-    "@sentry/integrations": "^5.3.1",
+    "@babel/polyfill": "^7.4.4",
+    "@sentry/browser": "^5.4.3",
+    "@sentry/integrations": "^5.4.2",
     "@xkeshi/vue-barcode": "^1.0.0",
-    "axios": "^0.17.0",
-    "body-parser": "^1.18.2",
-    "clipboard": "^1.7.1",
-    "compression": "^1.7.2",
-    "cors": "^2.8.4",
+    "axios": "^0.19.0",
+    "clipboard": "^2.0.4",
+    "core-js": "^2.6.5",
     "crypto-js": "^3.1.9-1",
-    "dependencies": "0.0.1",
-    "express-session": "^1.15.6",
-    "helmet": "^3.12.0",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
     "jsencrypt": "^3.0.0-rc.1",
-    "log4js": "^2.5.3",
-    "lrz": "^4.9.40",
-    "mint-ui": "^2.2.12",
+    "mint-ui": "^2.2.13",
     "mobile-detect": "^1.4.3",
-    "qrcode": "^1.2.2",
-    "qrcode.vue": "^1.6.0",
-    "vue": "^2.5.2",
-    "vue-amap": "^0.3.1",
-    "vue-axios": "^2.0.2",
-    "vue-concise-slider": "^2.4.5",
-    "vue-cookies": "^1.5.6",
-    "vue-jsonp": "^0.1.7",
-    "vue-router": "^3.0.1",
+    "qrcode.vue": "^1.6.2",
+    "vue": "^2.6.10",
+    "vue-amap": "^0.5.9",
+    "vue-cookies": "^1.5.13",
+    "vue-jsonp": "^0.1.8",
+    "vue-router": "^3.0.3",
     "vue-touch": "^2.0.0-beta.4",
-    "vuex": "^3.0.1",
-    "vuex-persist": "^1.1.3"
+    "vuex": "^3.1.1",
+    "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.6",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.1",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015-ie": "^6.7.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chai": "^4.1.2",
-    "chalk": "^2.4.0",
-    "compression-webpack-plugin": "^1.1.11",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.7",
-    "ejs": "^2.6.1",
-    "es6-promise": "^4.2.4",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "fastclick": "^1.0.6",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "fs-extra": "^6.0.1",
-    "happypack": "^5.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.3",
-    "jest": "^22.0.4",
-    "jest-serializer-vue": "^0.3.0",
-    "jest-transform-stub": "^1.0.0",
-    "mockjs": "^1.0.1-beta3",
-    "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.0",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-loader": "^2.1.5",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^7.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "style-loader": "^0.19.0",
-    "stylus-loader": "^3.0.1",
-    "url-loader": "^0.5.8",
-    "vue-jest": "^1.0.2",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "vue-test-utils": "^1.0.0-beta.11",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 0.5%",
-    "last 15 versions"
-  ]
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.6.10"
+  }
 }
