--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-component": "^1.1.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
+    "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
